--- a/terraform.tfvars.tmpl
+++ b/terraform.tfvars.tmpl
@@ -4,3 +4,4 @@ cluster_region  = "${CLUSTER_REGION}"
 cluster_version = "${CLUSTER_VERSION}"
 nodepool_name   = "${NODEPOOL_NAME}"
 nodepool_flavor = "${NODEPOOL_FLAVOR}"
+environment     = "${ENVIRONMENT}"
