cert-manager installation

--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -6,3 +6,5 @@ ovh:
   application_secret: ${OVH_APPLICATION_SECRET}
   consumer_key: ${OVH_CONSUMER_KEY}
 domain_name: ${DOMAIN_NAME}
+cert_manager:
+  issuer_mail: ${ISSUER_MAIL}
