--- a/ansible/roles/cert-manager/templates/issuer.yml.j2
+++ b/ansible/roles/cert-manager/templates/issuer.yml.j2
@@ -20,7 +20,7 @@ spec:
 # apiVersion: cert-manager.io/v1
 # kind: ClusterIssuer
 # metadata:
-#   name: "letsencrypt-{{ env }}"
+#   name: "letsencrypt-develop"
 # spec:
 #   acme:
 #     # The ACME server URL
@@ -29,7 +29,7 @@ spec:
 #     email: "{{ cert_manager.issuer_mail }}"
 #     # Name of a secret used to store the ACME account private key
 #     privateKeySecretRef:
-#       name: "letsencrypt-{{ env }}"
+#       name: "letsencrypt-develop"
 #     # Enable the HTTP-01 challenge provider
 #     solvers:
 #       - http01:
