--- a/ansible/roles/external-dns/templates/external-dns.yml.j2
+++ b/ansible/roles/external-dns/templates/external-dns.yml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: external-dns
-  namespace: default
+  namespace: external-dns
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -36,13 +36,13 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: external-dns
-  namespace: default
+  namespace: external-dns
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: external-dns
-  namespace: default
+  namespace: external-dns
 spec:
   strategy:
     type: Recreate
@@ -54,12 +54,13 @@ spec:
       labels:
         app: external-dns
     spec:
+      serviceAccountName: external-dns
       containers:
         - name: external-dns
           image: registry.k8s.io/external-dns/external-dns:v0.13.2
           args:
             - --source=ingress
-            - "--domain-filter={{ domain_name }}" # (optional) limit to only example.com domains; change to match the zone created above.
+            - "--domain-filter={{ domain_name }}"
             - --provider=ovh
             - --log-level=trace
           env:
