servername specific to each environment

--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -7,3 +7,5 @@ ovh:
 domain_name: ${DOMAIN_NAME}
 cert_manager:
   issuer_mail: ${ISSUER_MAIL}
+matrix:
+  server_name: ${SERVER_SUBDOMAIN_NAME}.${DOMAIN_NAME}
