dns_zone instead of domain_name

--- a/ansible/roles/external-dns/templates/external-dns.yml.j2
+++ b/ansible/roles/external-dns/templates/external-dns.yml.j2
@@ -60,7 +60,7 @@ spec:
           image: registry.k8s.io/external-dns/external-dns:v0.13.2
           args:
             - --source=ingress
-            - "--domain-filter={{ domain_name }}"
+            - "--domain-filter={{ dns_zone }}"
             - --provider=ovh
             - --log-level=trace
           env:
