--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -4,8 +4,8 @@ ovh:
   application_key: ${OVH_APPLICATION_KEY}
   application_secret: ${OVH_APPLICATION_SECRET}
   consumer_key: ${OVH_CONSUMER_KEY}
-domain_name: ${DOMAIN_NAME}
+dns_zone: ${DNS_ZONE}
 cert_manager:
   issuer_mail: ${ISSUER_MAIL}
 matrix:
-  server_name: ${SERVER_SUBDOMAIN_NAME}.${DOMAIN_NAME}
+  server_name: ${SERVER_SUBDOMAIN_NAME}.${DNS_ZONE}
