element-web role and application

--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -9,3 +9,5 @@ cert_manager:
   issuer_mail: ${ISSUER_MAIL}
 matrix:
   server_name: ${SERVER_SUBDOMAIN_NAME}.${DNS_ZONE}
+element:
+  server_name: ${ELEMENT_SUBDOMAIN_NAME}.${DNS_ZONE}
