--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -10,7 +10,8 @@ cert_manager:
 matrix:
   server_name: ${SERVER_SUBDOMAIN_NAME}.${DNS_ZONE}
   smtp_host: ${SMTP_HOST}
-  smtp_port: ${SMTP_PORT}
+# FIXME smtp_port set with ansible variable is consider as string and not int
+#  smtp_port: ${SMTP_PORT}
   smtp_user: ${SMTP_USER}
   smtp_pass: ${SMTP_PASS}
 element:
