--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -9,5 +9,10 @@ cert_manager:
   issuer_mail: ${ISSUER_MAIL}
 matrix:
   server_name: ${SERVER_SUBDOMAIN_NAME}.${DNS_ZONE}
+  smtp_host: ${SMTP_HOST}
+# FIXME smtp_port set with ansible variable is consider as string and not int
+#  smtp_port: ${SMTP_PORT}
+  smtp_user: ${SMTP_USER}
+  smtp_pass: ${SMTP_PASS}
 element:
   server_name: ${ELEMENT_SUBDOMAIN_NAME}.${DNS_ZONE}
