--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -7,6 +7,8 @@ ovh:
 dns_zone: ${DNS_ZONE}
 cert_manager:
   issuer_mail: ${ISSUER_MAIL}
+operator_licecycle_manager:
+  version: "v0.23.1"
 matrix:
   server_name: ${SERVER_SUBDOMAIN_NAME}.${DNS_ZONE}
 element:
