--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -9,6 +9,8 @@ cert_manager:
   issuer_mail: ${ISSUER_MAIL}
 operator_licecycle_manager:
   version: "v0.23.1"
+keycloak:
+  server_name: keycloak.${DNS_ZONE}
 matrix:
   server_name: ${SERVER_SUBDOMAIN_NAME}.${DNS_ZONE}
 element:
