keycloak operator works

--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -11,6 +11,7 @@ operator_licecycle_manager:
   version: "v0.23.1"
 keycloak:
   server_name: keycloak.${DNS_ZONE}
+  operator_version : 21.0.1
 matrix:
   server_name: ${SERVER_SUBDOMAIN_NAME}.${DNS_ZONE}
 element:
