--- a/ansible/roles/keycloak/templates/keycloak.yml.j2
+++ b/ansible/roles/keycloak/templates/keycloak.yml.j2
@@ -1,10 +1,10 @@
 apiVersion: k8s.keycloak.org/v2alpha1
 kind: Keycloak
 metadata:
-  name: example-kc
+  name: keycloak-psc
   namespace: keycloak
   labels:
-    app: sso
+    app: keycloak-psc
 spec:
   instances: 1
   hostname:
@@ -13,15 +13,15 @@ spec:
     strictBackchannel: false
   ingress:
     enabled: false
-  db:
-    vendor: postgres
-    host: keycloak-db
-    usernameSecret:
-      name: keycloak-db-secret
-      key: username
-    passwordSecret:
-      name: keycloak-db-secret
-      key: password
+#  db:
+#    vendor: postgres
+#    host: keycloak-db
+#    usernameSecret:
+#      name: keycloak-db-secret
+#      key: username
+#    passwordSecret:
+#      name: keycloak-db-secret
+#      key: password
   http:
     tlsSecret: matrix-tls-secret
     httpEnabled: true
