--- a/ansible/roles/keycloak/templates/keycloak-db.yml.j2
+++ b/ansible/roles/keycloak/templates/keycloak-db.yml.j2
@@ -1,3 +1,13 @@
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: keycloak-db-secret
+type: Opaque
+data:
+  username: {{ keycloak.db_user | b64encode}}
+  password: {{ keycloak.db_password | b64encode}}
+---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -19,18 +29,24 @@ spec:
           image: postgres:latest
           env:
             - name: POSTGRES_USER
-              value: keycloak
+              valueFrom:
+                secretKeyRef:
+                  name: keycloak-db-secret
+                  key: username
             - name: POSTGRES_PASSWORD
-              value: keycloak
+              valueFrom:
+                secretKeyRef:
+                  name: keycloak-db-secret
+                  key: password
             - name: PGDATA
               value: /data/pgdata
             - name: POSTGRES_DB
-              value: keycloak
+              value: {{ keycloak.db_instance_name }}
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: keycloak-db
+  name: {{ keycloak.db_svc_name }}
   namespace: keycloak
 spec:
   selector:
