--- a/ansible/roles/keycloak/templates/keycloak-db.yml.j2
+++ b/ansible/roles/keycloak/templates/keycloak-db.yml.j2
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: keycloak-db-secret
+  namespace: keycloak
 type: Opaque
 data:
   username: {{ keycloak.db_user | b64encode}}
@@ -46,7 +47,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ keycloak.db_svc_name }}
+  name: keycloak-database-svc
   namespace: keycloak
 spec:
   selector:
