synapse plugged with keycloak

--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -15,6 +15,8 @@ keycloak:
   db_instance_name: ${KECLOAK_DB_INSTANCE_NAME}
   db_user: ${KEYCLOAK_DB_USER}
   db_password: ${KEYCLOAK_DB_PASSWORD}
+  client_id: ${KEYCLOAK_CLIENT_ID}
+  client_secret: ${KEYCLOAK_CLIENT_SECRET}
 matrix:
   server_name: ${SERVER_SUBDOMAIN_NAME}.${DNS_ZONE}
   smtp_host: ${SMTP_HOST}
