dissociation of tls secrets used by keycloak and synapse

--- a/ansible/roles/keycloak/templates/ingress.yml.j2
+++ b/ansible/roles/keycloak/templates/ingress.yml.j2
@@ -22,4 +22,4 @@ spec:
   tls:
     - hosts:
         - "{{ keycloak.server_name }}"
-      secretName: matrix-tls-secret
+      secretName: keycloak-tls-secret
