--- a/ansible/roles/keycloak/templates/keycloak.yml.j2
+++ b/ansible/roles/keycloak/templates/keycloak.yml.j2
@@ -23,5 +23,5 @@ spec:
       name: keycloak-db-secret
       key: password
   http:
-    tlsSecret: matrix-tls-secret
+    tlsSecret: keycloak-tls-secret
     httpEnabled: true
