Prosanté connect connexion [WIP]

--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -17,6 +17,10 @@ keycloak:
   db_password: ${KEYCLOAK_DB_PASSWORD}
   client_id: ${KEYCLOAK_CLIENT_ID}
   client_secret: ${KEYCLOAK_CLIENT_SECRET}
+prosante_connect:
+  server_name: ${PROSANTE_CONNECT_URL}
+  client_id: ${PROSANTE_CONNECT_CLIENT_ID}
+  client_secret: ${PROSANTE_CONNECT_CLIENT_SECRET}
 matrix:
   server_name: ${SERVER_SUBDOMAIN_NAME}.${DNS_ZONE}
   smtp_host: ${SMTP_HOST}
