--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -18,7 +18,11 @@ keycloak:
   client_id: ${KEYCLOAK_CLIENT_ID}
   client_secret: ${KEYCLOAK_CLIENT_SECRET}
 prosante_connect:
-  server_name: ${PROSANTE_CONNECT_URL}
+  issuer: ${PROSANTE_CONNECT_ISSUER}
+  authorization_endpoint: ${PROSANTE_CONNECT_AUTHORIZATION_ENDPOINT}
+  token_endpoint: ${PROSANTE_CONNECT_TOKEN_ENDPOINT}
+  userinfo_endpoint: ${PROSANTE_CONNECT_USERINFO_ENDPOINT}
+  jwks_uri: ${PROSANTE_CONNECT_JKWS_URI}
   client_id: ${PROSANTE_CONNECT_CLIENT_ID}
   client_secret: ${PROSANTE_CONNECT_CLIENT_SECRET}
 matrix:
