--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -32,5 +32,7 @@ matrix:
 #  smtp_port: ${SMTP_PORT}
   smtp_user: ${SMTP_USER}
   smtp_pass: ${SMTP_PASS}
+  first_eimis_username: ${FIRST_EIMIS_USERNAME}
+  first_eimis_password: ${FIRST_EIMIS_PASSWORD}
 element:
   server_name: ${ELEMENT_SUBDOMAIN_NAME}.${DNS_ZONE}
