#44 : discovery room on homeserver

--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -36,5 +36,7 @@ matrix:
   first_eimis_password: ${FIRST_EIMIS_PASSWORD}
   dummy_username: ${DUMMY_USERNAME}
   dummy_password: ${DUMMY_PASSWORD}
+  discovery_room:
+    servers_list: ${DISCOVERY_ROOMS_SERVERS_LIST}
 element:
   server_name: ${ELEMENT_SUBDOMAIN_NAME}.${DNS_ZONE}
