--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -37,6 +37,6 @@ matrix:
   dummy_username: ${DUMMY_USERNAME}
   dummy_password: ${DUMMY_PASSWORD}
   discovery_room:
-    servers_list: ${DISCOVERY_ROOMS_SERVERS_LIST}
+    servers_list: ${FEDERATION_SERVERS_LIST}
 element:
   server_name: ${ELEMENT_SUBDOMAIN_NAME}.${DNS_ZONE}
