--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -34,5 +34,9 @@ matrix:
   smtp_pass: ${SMTP_PASS}
   first_eimis_username: ${FIRST_EIMIS_USERNAME}
   first_eimis_password: ${FIRST_EIMIS_PASSWORD}
+  dummy_username: ${DUMMY_USERNAME}
+  dummy_password: ${DUMMY_PASSWORD}
+  discovery_room:
+    servers_list: ${FEDERATION_SERVERS_LIST}
 element:
   server_name: ${ELEMENT_SUBDOMAIN_NAME}.${DNS_ZONE}
