#96 : environment creation and destruction improved, specially with wait for the external-dns to do its job

--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -7,6 +7,8 @@ ovh:
 dns_zone: ${DNS_ZONE}
 cert_manager:
   issuer_mail: ${ISSUER_MAIL}
+external_dns:
+  version: "v0.13.5"
 operator_licecycle_manager:
   version: "v0.23.1"
 keycloak:
