--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -7,10 +7,12 @@ ovh:
 dns_zone: ${DNS_ZONE}
 cert_manager:
   issuer_mail: ${ISSUER_MAIL}
+external_dns:
+  version: "v0.13.5"
 operator_licecycle_manager:
   version: "v0.23.1"
 keycloak:
-  server_name: idp.${DNS_ZONE}
+  server_name: idp.${ENVIRONMENT}.${DNS_ZONE}
   operator_version : 21.0.1
   db_instance_name: ${KECLOAK_DB_INSTANCE_NAME}
   db_user: ${KEYCLOAK_DB_USER}
@@ -26,7 +28,7 @@ prosante_connect:
   client_id: ${PROSANTE_CONNECT_CLIENT_ID}
   client_secret: ${PROSANTE_CONNECT_CLIENT_SECRET}
 matrix:
-  server_name: ${SERVER_SUBDOMAIN_NAME}.${DNS_ZONE}
+  server_name: ${SERVER_SUBDOMAIN_NAME}.${ENVIRONMENT}.${DNS_ZONE}
   smtp_host: ${SMTP_HOST}
 # FIXME smtp_port set with ansible variable is consider as string and not int
 #  smtp_port: ${SMTP_PORT}
@@ -39,4 +41,4 @@ matrix:
   discovery_room:
     servers_list: ${FEDERATION_SERVERS_LIST}
 element:
-  server_name: ${ELEMENT_SUBDOMAIN_NAME}.${DNS_ZONE}
+  server_name: ${ELEMENT_SUBDOMAIN_NAME}.${ENVIRONMENT}.${DNS_ZONE}
