96 multi env bis matabiau deployed (#108)
* #96 : customize registry of external-dns with env name

* #96 : customize registry of external-dns with ID specific by environment

--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -9,6 +9,7 @@ cert_manager:
   issuer_mail: ${ISSUER_MAIL}
 external_dns:
   version: "v0.13.5"
+  registry_id: ${ENVIRONMENT}
 operator_licecycle_manager:
   version: "v0.23.1"
 keycloak:
