103 ms teams bridge matabiau deployed (#112)
* #103 : msteams bridge installation

* #103 : msteams bridge configuration correction

* #103 : msteams bridge installation

* #103 : internal port for service/ingress : 80

* #103 : msteams bridge reachable from outside cluster finally !!!

* #103 : msteams bridge registration ok and idempotent

* #103 : our own version of msteams bridge

* #103 : msteams bridge config : verbose logging

* Update ansible/roles/teams-bridge/templates/msteams-pvc.yml

Co-authored-by: Adrien Touzouli <87697380+ad2ien@users.noreply.github.com>

---------

Co-authored-by: Adrien Touzouli <87697380+ad2ien@users.noreply.github.com>

--- a/ansible/roles/synapse-extra-config/templates/cm-extraconfig.yml.j2
+++ b/ansible/roles/synapse-extra-config/templates/cm-extraconfig.yml.j2
@@ -40,3 +40,5 @@ data:
             localpart_template: "{% raw %}{{ user.preferred_username }}{% endraw %}"
             display_name_template: "{% raw %}{{ user.name }}{% endraw %}"
         backchannel_logout_enabled: true # Optional
+    app_service_config_files:
+      - /data/msteams-registration.yaml
