#39 : better persistence of data  - postgresql installation

--- a/terraform.tfvars.tmpl
+++ b/terraform.tfvars.tmpl
@@ -4,3 +4,6 @@ cluster_region  = "${CLUSTER_REGION}"
 cluster_version = "${CLUSTER_VERSION}"
 nodepool_name   = "${NODEPOOL_NAME}"
 nodepool_flavor = "${NODEPOOL_FLAVOR}"
+desired_nodes   = "${DESIRED_NODES_NUM}"
+max_nodes       = "${MAX_NODES_NUM}"
+min_nodes       = "${MIN_NODES_NUM}"
