#39 : better persistence of data  - postgresql installation + VPC creation

--- a/terraform.tfvars.tmpl
+++ b/terraform.tfvars.tmpl
@@ -7,3 +7,14 @@ nodepool_flavor = "${NODEPOOL_FLAVOR}"
 desired_nodes   = "${DESIRED_NODES_NUM}"
 max_nodes       = "${MAX_NODES_NUM}"
 min_nodes       = "${MIN_NODES_NUM}"
+global_region   = "${GLOBALE_REGION}"
+database_version= "${DATABASE_VERSION}"
+database_plan   = "${DATABASE_PLAN}"
+database_flavor = "${DATABASE_FLAVOR}"
+database_disk   = "${DATABASE_DISK_SIZE}"
+keycloak_db_name= "${KECLOAK_DB_INSTANCE_NAME}"
+keycloak_db_user= "${KEYCLOAK_DB_USER}"
+openstack_tenant= "${OPENSTACK_TENANT}"
+openstack_user  = "${OPENSTACK_USER}"
+openstack_pwd   = "${OPENSTACK_PASSWORD}"
+vlan_id         = "${VLAN_ID}"
