--- a/terraform.tfvars.tmpl
+++ b/terraform.tfvars.tmpl
@@ -1,8 +1,7 @@
+env_name        = "${ENVIRONMENT}"
 service_name    = "${SERVICE_NAME}"
-cluster_name    = "${CLUSTER_NAME}"
 cluster_region  = "${CLUSTER_REGION}"
 cluster_version = "${CLUSTER_VERSION}"
-nodepool_name   = "${NODEPOOL_NAME}"
 nodepool_flavor = "${NODEPOOL_FLAVOR}"
 desired_nodes   = "${DESIRED_NODES_NUM}"
 max_nodes       = "${MAX_NODES_NUM}"
