#39 : cidr for vlan

--- a/terraform.tfvars.tmpl
+++ b/terraform.tfvars.tmpl
@@ -17,3 +17,4 @@ openstack_tenant= "${OPENSTACK_TENANT}"
 openstack_user  = "${OPENSTACK_USER}"
 openstack_pwd   = "${OPENSTACK_PASSWORD}"
 vlan_id         = "${VLAN_ID}"
+vlan_cidr       = "${VLAN_CIDR}"
