#39 : only database. Vlan commented

--- a/terraform.tfvars.tmpl
+++ b/terraform.tfvars.tmpl
@@ -1,6 +1,6 @@
 env_name        = "${ENVIRONMENT}"
-service_name    = "${SERVICE_NAME}"
-cluster_region  = "${CLUSTER_REGION}"
+service_name    = "${OVH_CLOUD_PROJECT_SERVICE}"
+cluster_region  = "${OS_REGION_NAME}"
 cluster_version = "${CLUSTER_VERSION}"
 nodepool_flavor = "${NODEPOOL_FLAVOR}"
 desired_nodes   = "${DESIRED_NODES_NUM}"
@@ -13,8 +13,5 @@ database_flavor = "${DATABASE_FLAVOR}"
 database_disk   = "${DATABASE_DISK_SIZE}"
 keycloak_db_name= "${KECLOAK_DB_INSTANCE_NAME}"
 keycloak_db_user= "${KEYCLOAK_DB_USER}"
-openstack_tenant= "${OPENSTACK_TENANT}"
-openstack_user  = "${OPENSTACK_USER}"
-openstack_pwd   = "${OPENSTACK_PASSWORD}"
 vlan_id         = "${VLAN_ID}"
 vlan_cidr       = "${VLAN_CIDR}"
