#39 : correction to pass GHA

--- a/terraform.tfvars.tmpl
+++ b/terraform.tfvars.tmpl
@@ -13,5 +13,5 @@ database_flavor = "${DATABASE_FLAVOR}"
 database_disk   = "${DATABASE_DISK_SIZE}"
 keycloak_db_name= "${KECLOAK_DB_INSTANCE_NAME}"
 keycloak_db_user= "${KEYCLOAK_DB_USER}"
-vlan_id         = "${VLAN_ID}"
+#vlan_id         = "${VLAN_ID}"
 vlan_cidr       = "${VLAN_CIDR}"
