#39 : better persistence of data - vpc and subnet creation ok (database not located on the subnet)

--- a/terraform.tfvars.tmpl
+++ b/terraform.tfvars.tmpl
@@ -1,6 +1,6 @@
 env_name        = "${ENVIRONMENT}"
 service_name    = "${OVH_CLOUD_PROJECT_SERVICE}"
-cluster_region  = "${OS_REGION_NAME}"
+os_region_name  = "${OS_REGION_NAME}"
 cluster_version = "${CLUSTER_VERSION}"
 nodepool_flavor = "${NODEPOOL_FLAVOR}"
 desired_nodes   = "${DESIRED_NODES_NUM}"
