#39 : synapse plugged to external postgresql database

--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -35,6 +35,11 @@ matrix:
 #  smtp_port: ${SMTP_PORT}
   smtp_user: ${SMTP_USER}
   smtp_pass: ${SMTP_PASS}
+  db_host: ${SYNAPSE_DB_HOST}
+  db_port: ${SYNAPSE_DB_PORT}
+  db_instance_name: ${SYNAPSE_DB_INSTANCE_NAME}
+  db_user: ${SYNAPSE_DB_USER}
+  db_password: ${SYNAPSE_DB_PASSWORD}
   first_eimis_username: ${FIRST_EIMIS_USERNAME}
   first_eimis_password: ${FIRST_EIMIS_PASSWORD}
   dummy_username: ${DUMMY_USERNAME}
