#39 : created new role to init database before synapse chart installation

--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -40,6 +40,7 @@ matrix:
   db_instance_name: ${SYNAPSE_DB_INSTANCE_NAME}
   db_user: ${SYNAPSE_DB_USER}
   db_password: ${SYNAPSE_DB_PASSWORD}
+  avnadmin_password: ${AVNADMIN_DB_PASSWORD}
   first_eimis_username: ${FIRST_EIMIS_USERNAME}
   first_eimis_password: ${FIRST_EIMIS_PASSWORD}
   dummy_username: ${DUMMY_USERNAME}
