Feat/39 ensure persistence of data matabiau deployed (#133)
* #39 : better persistence of data  - postgresql installation

* #39 : better persistence of data  - postgresql installation + VPC creation

* #39 : suppression of cluster_name and nodepool_name variables

* #39 : cidr for vlan

* #39 : only database. Vlan commented

* #39 : better persistence of data - GHA workflow

* terraform fmt

* #39 : better persistence of data  - var for GHA Wrokflow

* #39 : correction to pass GHA

* #39 : correction to pass GHA

* #39 : correction to pass GHA

* #39 : postgresql installation - number of nodes depends directly from the plan

* #39 : better persistence of data - vpc and subnet creation ok (database not located on the subnet)

* #39 : better persistence of data  - postgresql installed on the private network

* #39 : terraform fmt

* #39 : correction on destroy GHA workflow and on script used to retrieve kaycloak passwords

* #39 : synapse plugged to external postgresql database

* #39 : created new role to init database before synapse chart installation

* #39 : unused variables and linter correction

* #39 : ansible linter

* #39 : forgot to variabilize this value

* #39 : documentation update

* #39 : db name variabilized

* #39 : vlan_id var suppressed

* #39 : just an exemple of value for cidr

* #39 : code cleaning

* #39 : just a comment

* #39 : psql docker image arbitrarily fixed to avoid breaking change

--- a/terraform.tfvars.tmpl
+++ b/terraform.tfvars.tmpl
@@ -1,6 +1,15 @@
-service_name    = "${SERVICE_NAME}"
-cluster_name    = "${CLUSTER_NAME}"
-cluster_region  = "${CLUSTER_REGION}"
+env_name        = "${ENVIRONMENT}"
+service_name    = "${OVH_CLOUD_PROJECT_SERVICE}"
+os_region_name  = "${OS_REGION_NAME}"
 cluster_version = "${CLUSTER_VERSION}"
-nodepool_name   = "${NODEPOOL_NAME}"
 nodepool_flavor = "${NODEPOOL_FLAVOR}"
+desired_nodes   = "${DESIRED_NODES_NUM}"
+max_nodes       = "${MAX_NODES_NUM}"
+min_nodes       = "${MIN_NODES_NUM}"
+global_region   = "${GLOBALE_REGION}"
+database_version= "${DATABASE_VERSION}"
+database_plan   = "${DATABASE_PLAN}"
+database_flavor = "${DATABASE_FLAVOR}"
+database_disk   = "${DATABASE_DISK_SIZE}"
+synapse_db_user = "${SYNAPSE_DB_USER}"
+vlan_cidr       = "${VLAN_CIDR}"
