#131 new variable value for auto-registration

--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -40,6 +40,7 @@ matrix:
   first_eimis_password: ${FIRST_EIMIS_PASSWORD}
   dummy_username: ${DUMMY_USERNAME}
   dummy_password: ${DUMMY_PASSWORD}
+  auto_registration: ${SYNAPSE_AUTO_REGISTRATION}
   discovery_room:
     servers_list: ${FEDERATION_SERVERS_LIST}
 element:
