--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -47,6 +47,7 @@ matrix:
 element:
   server_name: ${ELEMENT_SUBDOMAIN_NAME}.${ENVIRONMENT}.${DNS_ZONE}
 msteams:
+  enabled: ${TEAMS_BRIDGE_ENABLED}
   server_name: ${TEAMS_BRIDGE_SUBDOMAIN_NAME}.${ENVIRONMENT}.${DNS_ZONE}
   oauth:
     client_id: ${TEAMS_OAUTH_CLIENT_ID}
