use teams bridge parameter var in synapse extra config

--- a/ansible/roles/synapse-extra-config/templates/cm-extraconfig.yml.j2
+++ b/ansible/roles/synapse-extra-config/templates/cm-extraconfig.yml.j2
@@ -33,5 +33,7 @@ data:
 {% endif %}
     auto_join_rooms: ["#discoveryroom:{{ matrix.server_name }}"]
     autocreate_auto_join_rooms: true
+{% if msteams.enabled %}  
     app_service_config_files:
       - /data/msteams-registration.yaml
+{% endif %}
