parametrize email sender

--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -31,6 +31,7 @@ matrix:
 #  smtp_port: ${SMTP_PORT}
   smtp_user: ${SMTP_USER}
   smtp_pass: ${SMTP_PASS}
+  notify_from: ${SMTP_NOTIFY_FROM}
   db_host: ${SYNAPSE_DB_HOST}
   db_port: ${SYNAPSE_DB_PORT}
   db_instance_name: ${SYNAPSE_DB_INSTANCE_NAME}
