--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -53,3 +53,5 @@ msteams:
   oauth:
     client_id: ${TEAMS_OAUTH_CLIENT_ID}
     client_secret: ${TEAMS_OAUTH_CLIENT_SECRET}
+monitoring:
+  server_name: ${MONITORING_SUBDOMAIN_NAME}.${ENVIRONMENT}.${DNS_ZONE}
