--- a/ansible/roles/synapse-extra-config/templates/cm-extraconfig.yml.j2
+++ b/ansible/roles/synapse-extra-config/templates/cm-extraconfig.yml.j2
@@ -33,6 +33,9 @@ data:
 {% endif %}
     auto_join_rooms: ["#discoveryroom:{{ matrix.server_name }}"]
     autocreate_auto_join_rooms: true
+{% if matrix.servers_list is defined %}
+    federation_domain_whitelist: {{ matrix.servers_list }}
+{% endif %}
 {% if msteams.enabled %}  
     app_service_config_files:
       - /data/msteams-registration.yaml
