--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -56,3 +56,4 @@ monitoring:
   kube_prometheus_version: v0.12.0
   kube_prometheus_git_url: "https://github.com/prometheus-operator/kube-prometheus.git"
   server_name: ${MONITORING_SUBDOMAIN_NAME}.${ENVIRONMENT}.${DNS_ZONE}
+  grafana_password: ${MONITORING_GRAFANA_PASSWORD}
