--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -25,7 +25,7 @@ prosante_connect:
   client_id: ${PROSANTE_CONNECT_CLIENT_ID}
   client_secret: ${PROSANTE_CONNECT_CLIENT_SECRET}
 matrix:
-  server_name: ${SERVER_SUBDOMAIN_NAME}.${ENVIRONMENT}.${DNS_ZONE}
+  server_name: ${SERVER_SUBDOMAIN_NAME}.${ENV_IN_URL}.${DNS_ZONE}
   smtp_host: ${SMTP_HOST}
 # FIXME smtp_port set with ansible variable is consider as string and not int
 #  smtp_port: ${SMTP_PORT}
@@ -45,15 +45,15 @@ matrix:
   auto_registration: ${SYNAPSE_AUTO_REGISTRATION}
   servers_list: ${FEDERATION_SERVERS_LIST}
 element:
-  server_name: ${ELEMENT_SUBDOMAIN_NAME}.${ENVIRONMENT}.${DNS_ZONE}
+  server_name: ${ELEMENT_SUBDOMAIN_NAME}.${ENV_IN_URL}.${DNS_ZONE}
 msteams:
   enabled: ${TEAMS_BRIDGE_ENABLED}
-  server_name: ${TEAMS_BRIDGE_SUBDOMAIN_NAME}.${ENVIRONMENT}.${DNS_ZONE}
+  server_name: ${TEAMS_BRIDGE_SUBDOMAIN_NAME}.${ENV_IN_URL}.${DNS_ZONE}
   oauth:
     client_id: ${TEAMS_OAUTH_CLIENT_ID}
     client_secret: ${TEAMS_OAUTH_CLIENT_SECRET}
 monitoring:
   kube_prometheus_version: v0.12.0
   kube_prometheus_git_url: "https://github.com/prometheus-operator/kube-prometheus.git"
-  server_name: ${MONITORING_SUBDOMAIN_NAME}.${ENVIRONMENT}.${DNS_ZONE}
+  server_name: ${MONITORING_SUBDOMAIN_NAME}.${ENV_IN_URL}.${DNS_ZONE}
   grafana_password: ${MONITORING_GRAFANA_PASSWORD}
