Mapping of properties between psc data and synapse user properties (#169)
* #51 mail added to user profile created through PSC

* #51 mapping of data coming from Prosanté Connect is now better : first name and family name are now displayed when connecting with PSC

--- a/ansible/roles/synapse-extra-config/templates/cm-extraconfig.yml.j2
+++ b/ansible/roles/synapse-extra-config/templates/cm-extraconfig.yml.j2
@@ -28,7 +28,8 @@ data:
         user_mapping_provider:
           config:
             localpart_template: "{% raw %}{{ user.preferred_username }}{% endraw %}"
-            display_name_template: "{% raw %}{{ user.name }}{% endraw %}"
+            display_name_template: "{% raw %}{{ user.given_name }} {{ user.family_name }}{% endraw %}"
+            email_template: "{% raw %}{{ user.email }}{% endraw %}"
         backchannel_logout_enabled: true # Optional
 {% endif %}
     auto_join_rooms: ["#discoveryroom:{{ matrix.server_name }}"]
