--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -44,6 +44,10 @@ matrix:
   dummy_password: ${DUMMY_PASSWORD}
   auto_registration: ${SYNAPSE_AUTO_REGISTRATION}
   servers_list: ${FEDERATION_SERVERS_LIST}
+  s3_media_repo:
+    url: ${S3_MEDIA_REPO_URL}
+    access_key: ${S3_MEDIA_REPO_ACCESS_KEY}
+    secret_key: ${S3_MEDIA_REPO_SECRET_KEY}
 element:
   server_name: ${ELEMENT_SUBDOMAIN_NAME}.${ENV_IN_URL}.${DNS_ZONE}
 msteams:
