--- a/ansible/roles/synapse-extra-config/templates/cm-extraconfig.yml.j2
+++ b/ansible/roles/synapse-extra-config/templates/cm-extraconfig.yml.j2
@@ -41,3 +41,16 @@ data:
     app_service_config_files:
       - /data/msteams-registration.yaml
 {% endif %}
+    media_storage_providers:
+      - module: s3_storage_provider.S3StorageProviderBackend
+        store_local: True
+        store_remote: True
+        store_synchronous: True
+        config:
+          bucket: {{ env }}-{{ matrix.s3_media_repo.bucket_name }}
+          # All of the below options are optional, for use with non-AWS S3-like
+          # services, or to specify access tokens here instead of some external method.
+          region_name: gra
+          endpoint_url:  {{ matrix.s3_media_repo.url }}
+          access_key_id: {{ matrix.s3_media_repo.access_key }}
+          secret_access_key: {{ matrix.s3_media_repo.secret_key }}
