variabilize synapse s3 provider module version

--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -50,6 +50,7 @@ matrix:
     url: ${S3_MEDIA_REPO_URL}
     access_key: ${S3_MEDIA_REPO_ACCESS_KEY}
     secret_key: ${S3_MEDIA_REPO_SECRET_KEY}
+    module_version: "v1.2.1"
 element:
   server_name: ${ELEMENT_SUBDOMAIN_NAME}.${ENV_IN_URL}.${DNS_ZONE}
 msteams:
