s3 module: fix region and env parameters

--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -1,5 +1,4 @@
 ---
-env: ${ENVIRONMENT}
 ovh:
   endpoint: ${OVH_ENDPOINT}
   application_key: ${OVH_APPLICATION_KEY}
@@ -46,7 +45,8 @@ matrix:
   auto_registration: ${SYNAPSE_AUTO_REGISTRATION}
   servers_list: ${FEDERATION_SERVERS_LIST}
   s3_media_repo:
-    bucket_name: ${S3_MEDIA_BUCKET_NAME}
+    region: ${S3_REGION}
+    bucket_name: ${ENVIRONMENT}-${S3_MEDIA_BUCKET_NAME}
     url: ${S3_MEDIA_REPO_URL}
     access_key: ${S3_MEDIA_REPO_ACCESS_KEY}
     secret_key: ${S3_MEDIA_REPO_SECRET_KEY}
