s3 module: remove bucket name variable

--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -46,7 +46,7 @@ matrix:
   servers_list: ${FEDERATION_SERVERS_LIST}
   s3_media_repo:
     region: ${S3_REGION}
-    bucket_name: ${ENVIRONMENT}-${S3_MEDIA_BUCKET_NAME}
+    bucket_name: ${S3_MEDIA_BUCKET_NAME}
     url: ${S3_MEDIA_REPO_URL}
     access_key: ${S3_MEDIA_REPO_ACCESS_KEY}
     secret_key: ${S3_MEDIA_REPO_SECRET_KEY}
