fix: bug linked to terraform version bump corrected : the AWS_ENDPOINT_URL_S3 should now contain the http/https prefix

--- a/terraform.tfvars.tmpl
+++ b/terraform.tfvars.tmpl
@@ -13,3 +13,4 @@ database_flavor = "${DATABASE_FLAVOR}"
 database_disk   = "${DATABASE_DISK_SIZE}"
 synapse_db_user = "${SYNAPSE_DB_USER}"
 vlan_cidr       = "${VLAN_CIDR}"
+s3_media_repo_endpoint = "${AWS_S3_MEDIA_REPO_ENDPOINT}"
