monitoring: parametrize prometheus volume size

--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -64,3 +64,4 @@ monitoring:
   kube_prometheus_git_url: "https://github.com/prometheus-operator/kube-prometheus.git"
   server_name: ${MONITORING_SUBDOMAIN_NAME}.${ENV_IN_URL}.${DNS_ZONE}
   grafana_password: ${MONITORING_GRAFANA_PASSWORD}
+  prometheus_volume_size: ${MONITORING_PROMETHEUS_VOLUME_SIZE}
