--- a/terraform.tfvars.tmpl
+++ b/terraform.tfvars.tmpl
@@ -13,3 +13,4 @@ database_flavor = "${DATABASE_FLAVOR}"
 database_disk   = "${DATABASE_DISK_SIZE}"
 synapse_db_user = "${SYNAPSE_DB_USER}"
 vlan_cidr       = "${VLAN_CIDR}"
+aws_s3_media_repo_secret_key = "${AWS_S3_MEDIA_REPO_SECRET_KEY}"
