--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -61,6 +61,9 @@ msteams:
   oauth:
     client_id: ${TEAMS_OAUTH_CLIENT_ID}
     client_secret: ${TEAMS_OAUTH_CLIENT_SECRET}
+stunner:
+  enabled: ${STUNNER_ENABLED}
+  server_name: ${STUNNER_SUBDOMAIN_NAME}.${ENV_IN_URL}.${DNS_ZONE}
 monitoring:
   chart_version: "55.5.0"
   kube_prometheus_git_url: "https://github.com/prometheus-operator/kube-prometheus.git"
