--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -43,6 +43,7 @@ matrix:
   dummy_password: ${DUMMY_PASSWORD}
   auto_registration: ${SYNAPSE_AUTO_REGISTRATION}
   media_upload_max_size_mb: ${SYNAPSE_MEDIA_UPLOAD_MAX_SIZE_MB}
+  welcome_room: ${SYNAPSE_WELCOME_ROOM}
   servers_list: ${FEDERATION_SERVERS_LIST}
   s3_media_repo:
     region: ${S3_REGION}
