--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -13,6 +13,12 @@ cert_manager:
 external_dns:
   version: "v0.14.0"
   registry_id: ${ENVIRONMENT}
+keycloak:
+  db_user: "keycloak"
+  db_password: ${KEYCLOAK_DB_PASSWORD}
+  db_avnadmin_password: ${KEYCLOAK_DB_AVNADMIN_PASSWORD}
+  db_host: ${KEYCLOAK_DB_HOST}
+  db_port: ${KEYCLOAK_DB_PORT}
 prosante_connect:
   enabled: ${PROSANTE_CONNECT_ENABLED}
   issuer: ${PROSANTE_CONNECT_ISSUER}
