feat(keycloak): deploy an empty keycloak instance

--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -14,11 +14,15 @@ external_dns:
   version: "v0.14.0"
   registry_id: ${ENVIRONMENT}
 keycloak:
+  server_name: idp.${ENV_IN_URL}.${DNS_ZONE}
+  operator_version : 21.1.2
   db_user: "keycloak"
   db_password: ${KEYCLOAK_DB_PASSWORD}
   db_avnadmin_password: ${KEYCLOAK_DB_AVNADMIN_PASSWORD}
   db_host: ${KEYCLOAK_DB_HOST}
   db_port: ${KEYCLOAK_DB_PORT}
+  client_id: ${KEYCLOAK_CLIENT_ID}
+  client_secret: ${KEYCLOAK_CLIENT_SECRET}
 prosante_connect:
   enabled: ${PROSANTE_CONNECT_ENABLED}
   issuer: ${PROSANTE_CONNECT_ISSUER}
