--- a/ansible/roles/synapse/templates/synapse-chart-config.j2
+++ b/ansible/roles/synapse/templates/synapse-chart-config.j2
@@ -70,7 +70,7 @@ extraConfig:
       - "#{{ matrix.welcome_room }}:{{ matrix.server_name }}"
 {% endif %}
 {% if stunner.enabled is defined %}
-  turn_uris: ["turn:{{ stunner_gateway.stdout }}:3478?transport=udp" ]
+  turn_uris: ["turn:{{ stunner_gateway_ip }}:3478?transport=udp" ]
   turn_shared_secret: "{{ stunner.shared_secret }}"
   turn_user_lifetime: 86400000
   turn_allow_guests: True
