specify stunner chart version

--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -63,6 +63,7 @@ msteams:
     client_secret: ${TEAMS_OAUTH_CLIENT_SECRET}
 stunner:
   enabled: ${STUNNER_ENABLED}
+  chart_version: "v0.17.0"
   shared_secret: ${STUNNER_SHARED_SECRET}
 monitoring:
   chart_version: "55.5.0"
