--- a/ansible/roles/keycloak/templates/keycloak.yml.j2
+++ b/ansible/roles/keycloak/templates/keycloak.yml.j2
@@ -7,6 +7,7 @@ metadata:
     app: keycloak-eimis
 spec:
   instances: 1
+  image: eimisans/eimis-keycloak:21.1.1
   hostname:
     hostname: "{{ keycloak.server_name }}"
     strict: false
