refactor(settings): separate email and display name

--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -40,7 +40,9 @@ matrix:
 #  smtp_port: ${SMTP_PORT}
   smtp_user: ${SMTP_USER}
   smtp_pass: ${SMTP_PASS}
-  notify_from: ${SMTP_NOTIFY_FROM}
+  smtp_from: ${SMTP_FROM}
+  smtp_display_name: ${SMTP_DISPLAY_NAME}
+  notify_from: ${SMTP_DISPLAY_NAME}<${SMTP_FROM}>
   db_host: ${SYNAPSE_DB_HOST}
   db_port: ${SYNAPSE_DB_PORT}
   db_instance_name: ${SYNAPSE_DB_INSTANCE_NAME}
