fix(stunner): make stunner deployment optional

--- a/ansible/roles/synapse/templates/synapse-chart-config.j2
+++ b/ansible/roles/synapse/templates/synapse-chart-config.j2
@@ -69,7 +69,7 @@ extraConfig:
 {% if matrix.welcome_room is defined %}
       - "#{{ matrix.welcome_room }}:{{ matrix.server_name }}"
 {% endif %}
-{% if stunner.enabled is defined %}
+{% if stunner.enabled %}
   turn_uris: ["turn:{{ stunner_gateway_ip }}:3478?transport=udp" ]
   turn_shared_secret: "{{ stunner.shared_secret }}"
   turn_user_lifetime: 86400000
