--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -14,8 +14,8 @@ external_dns:
   version: "v0.14.0"
   registry_id: ${ENVIRONMENT}
 keycloak:
-  server_name: idp.${ENV_IN_URL}.${DNS_ZONE}
-  operator_version : 21.1.1
+  server_name: ${KEYCLOAK_SUBDOMAIN_NAME}.${ENV_IN_URL}.${DNS_ZONE}
+  operator_version : 23.0.3
   db_user: "keycloak"
   db_password: ${KEYCLOAK_DB_PASSWORD}
   db_avnadmin_password: ${KEYCLOAK_DB_AVNADMIN_PASSWORD}
