--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -34,6 +34,7 @@ prosante_connect:
   client_secret: ${PROSANTE_CONNECT_CLIENT_SECRET}
 matrix:
   chart_version: "3.7.14"
+  image_version: "1.98.0-1"
   server_name: ${SERVER_SUBDOMAIN_NAME}.${ENV_IN_URL}.${DNS_ZONE}
   smtp_host: ${SMTP_HOST}
 # FIXME smtp_port set with ansible variable is consider as string and not int
@@ -63,7 +64,6 @@ matrix:
     url: ${S3_MEDIA_REPO_URL}
     access_key: ${S3_MEDIA_REPO_ACCESS_KEY}
     secret_key: ${S3_MEDIA_REPO_SECRET_KEY}
-    module_version: "v1.3.0"
 element:
   chart_version: "1.3.9"
   server_name: ${ELEMENT_SUBDOMAIN_NAME}.${ENV_IN_URL}.${DNS_ZONE}
