--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -64,6 +64,8 @@ matrix:
     access_key: ${S3_MEDIA_REPO_ACCESS_KEY}
     secret_key: ${S3_MEDIA_REPO_SECRET_KEY}
     module_version: "v1.3.0"
+  psc_mapping_provider:
+    module_version: "latest"
 element:
   chart_version: "1.3.9"
   server_name: ${ELEMENT_SUBDOMAIN_NAME}.${ENV_IN_URL}.${DNS_ZONE}
