--- a/ansible/roles/synapse/templates/synapse-chart-config.j2
+++ b/ansible/roles/synapse/templates/synapse-chart-config.j2
@@ -1,6 +1,6 @@
 image:
   repository: eimisans/synapse
-  tag: {{ matrix.image_version }}
+  tag: {{ matrix.image_tag }}
 synapse:
   strategy:
     type: Recreate
