--- a/ansible/group_vars/env_vars.tmpl
+++ b/ansible/group_vars/env_vars.tmpl
@@ -15,6 +15,7 @@ external_dns:
   registry_id: ${ENVIRONMENT}
 keycloak:
   server_name: ${KEYCLOAK_SUBDOMAIN_NAME}.${ENV_IN_URL}.${DNS_ZONE}
+  image_tag: ${KEYCLOAK_IMAGE_TAG}
   operator_version : 23.0.3
   db_user: "keycloak"
   db_password: ${KEYCLOAK_DB_PASSWORD}
@@ -34,7 +35,7 @@ prosante_connect:
   client_secret: ${PROSANTE_CONNECT_CLIENT_SECRET}
 matrix:
   chart_version: "3.7.14"
-  image_version: "1.98.0-1"
+  image_tag: ${SYNAPSE_IMAGE_TAG}
   server_name: ${SERVER_SUBDOMAIN_NAME}.${ENV_IN_URL}.${DNS_ZONE}
   smtp_host: ${SMTP_HOST}
 # FIXME smtp_port set with ansible variable is consider as string and not int
