--- a/ansible/roles/synapse/templates/synapse-chart-config.j2
+++ b/ansible/roles/synapse/templates/synapse-chart-config.j2
@@ -53,6 +53,8 @@ wellknown:
 extraConfig:
   allow_public_rooms_over_federation: true
   enable_registration_without_verification: false
+  password_config:
+    enabled: {{ matrix.password_config }}
   max_upload_size: {{ matrix.media_upload_max_size_mb }}M
   registrations_require_3pid:
     - email
