fix(synapse): try to fix helm deployment

--- a/ansible/roles/synapse/templates/synapse-chart-config.j2
+++ b/ansible/roles/synapse/templates/synapse-chart-config.j2
@@ -1,6 +1,7 @@
 image:
   repository: eimisans/synapse
   tag: {{ matrix.image_tag }}
+  pullPolicy: IfNotPresent
 synapse:
   strategy:
     type: Recreate
